fix individual page css text alignment

--- a/application/client/src/Components/views/About/Individual/css/YG.css
+++ b/application/client/src/Components/views/About/Individual/css/YG.css
@@ -23,7 +23,6 @@
 .yg-textbox {
   display: block;
   margin: 3rem;
-  width: 40%;
   text-align: center;
   padding-bottom: 9rem;
 }
